# MSToolkit

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE.txt  README.md  build.sh  clean_build.sh  contribute.md  env.sh  storage.md
.github/workflows/: build.yml
cmake/: FindLibDwarf.cmake  FindLibElf.cmake  FindLibunwind.cmake  FindOTF2.cmake  FindPAPI.cmake
doc/: SamplingREADME.md
include/compress/: compress.h  snappy_compress.h
include/instrument/: backtrace.h  pmu_collector.h  stg.h
include/record/: accl_helper.h  event_defines.evt  record_area.h  record_defines.h  record_meta.h  record_reader.h  record_type.h  record_type_info.h  record_type_traits.h  record_types.def  record_utils.h  record_writer.h
include/record/v0/: record_type_info.h  record_type_traits.h  wrap_defines.h
include/utils/: addr2line.hpp  common_util.h  configuration.h  demangle.h  dwarf_line_info.h  jsi_io.h  jsi_log.h  safe.hpp  tsc_freq_x86_cpuinfo.h  tsc_timer.h
lib/: CMakeLists.txt
lib/accl/: CMakeLists.txt
lib/accl/rocm/: CMakeLists.txt  rocm_tracer.hip
lib/common/: CMakeLists.txt  backtrace.cpp  dwarf_line_info.cpp  pmu_collector.cpp  record_area.cpp  record_meta.cpp  stg.cpp
lib/compress/: CMakeLists.txt  compress.cpp  snappy_compress.cpp
lib/function/: CMakeLists.txt  tracelib.cpp
lib/memory_wrapper/: CMakeLists.txt  memory_instrument.h  memory_wrapper.cpp
lib/mpi_wrapper/: CMakeLists.txt  jsi_sampling.h  mpi_instrument.h  mpi_wrapper.w
lib/mpi_wrapper/wrap/: WrapConfig.cmake  wrap.py
lib/pse/: .gitignore  CMakeLists.txt  vcpkg.json
lib/pse/include/: Recorder.h
lib/pse/include/dsr/: data_section_view.h  parallel_range_algs_for_vec.h  regroup_range_adaptor.h  view_utils.h
lib/pse/include/fsl/: basic_section.h  fsl_block.h  fsl_lib.h  fsl_section.hpp  raw_backend.h
lib/pse/include/ral/: backend.h  desc_manager.h  extractor.h  section.h  section.hpp  section_declare.h  section_mixin.h  time_detector.h  type_register.h
lib/pse/include/sql/: driver.h  sql_section.h  table_desc.h
lib/pse/include/utils/: compile_time.h  lock.h
lib/pse/scripts/: build_dependencies.sh
lib/pse/src/fsl/: CMakeLists.txt  fsl_block.cpp  fsl_lib.cpp
lib/pse/src/ral/: CMakeLists.txt  backend.cpp
lib/pse/src/sql/: CMakeLists.txt  driver.cpp
lib/pse/test/: CMakeLists.txt  atomic_test.cpp  detect_field_test.cpp  dir_iterator_test.cpp  extractor_iter_test.cpp  flock_test.cpp  fsl_fork_test.cpp  fsl_interface_test.cpp  fsl_large_file_test.cpp  fsl_mt_large_test.cpp  fsl_multi_section_test.cpp  fsl_test.cpp  iterator_test.cpp  new_backend_test.cpp  new_extractor_test.cpp  parallel_range_algs_for_vec.cpp  ral_section_test.cpp  ranges_test.cpp  regroup_test.cpp  sql_interface_test.cpp  sql_test.cpp  typename_test.cpp  view_utils_test.cpp
lib/pse/tools/: CMakeLists.txt  sls.cpp
lib/reader/: CMakeLists.txt  record_reader.cpp
lib/reader/accl_helper/: accl_helper_default.cpp  accl_helper_rocm.hip
lib/record/: CMakeLists.txt  record_writer.cpp
lib/sampling/: CMakeLists.txt  pmu_sampling.cpp
scripts/analysis/variance/: heatmap.py  heatmap_mpi.py  var_heatmap.py
scripts/build_scripts/: compile_type_defines.py  generate_wrap_defines.py
test/: CMakeLists.txt
test/comm_analysis/: Makefile  README.md  bad_comm.cpp  opt_comm.cpp  run.sh
test/cpu_regression_test/: npb3.4
test/lib/: CMakeLists.txt
test/lib/common/: CMakeLists.txt  backtrace_test.cpp  pmu_collector_test.cpp
test/lib/memory_wrapper/: .gdbinit  demo  mpi_example  mpi_example.cpp  test.cpp
test/lib/sampling/: CMakeLists.txt  code2measure.cpp
test/storage/dsk_20241017/: CMakeLists.txt  README.md  storage_test.cpp
test/storage/dsk_20241219/: CMakeLists.txt  README.md  storage_interface_read_test.cpp  storage_interface_write_test.cpp
test/storage/dsk_20250115/: CMakeLists.txt  README.md  record_reader_test.cpp  write_trace.cpp
test/storage/lkl_20241024/: CMakeLists.txt  README.md  backtrace_test.cpp
test/storage/lkl_20241029/: CMakeLists.txt  README.md  meta_test.cpp
tool/: CMakeLists.txt
tool/analysis/: CMakeLists.txt
tool/analysis/comm_analysis/: CMakeLists.txt  comm_analysis.cpp  comm_analysis.h  driver.cpp  heatmap_script.py
tool/analysis/comm_statistic/: CMakeLists.txt  comm_statistic.cpp  comm_statistic.h  driver.cpp
tool/analysis/dwarf_line_info_dump/: CMakeLists.txt  dwarf_line_info_dump.cpp
tool/analysis/graph/: CMakeLists.txt  dependancy_graph.cpp  dependancy_graph.h  dependancy_graph_omp.cpp  driver.cpp  json_writer.h
tool/analysis/graph_time_slice/: CMakeLists.txt  README.md  dependancy_graph.cpp  dependancy_graph.h  driver.cpp
tool/analysis/graph_time_slice_all/: CMakeLists.txt  README.md  dependancy_graph.cpp  dependancy_graph.h  driver.cpp  json_writer.h
tool/analysis/load_balance/: CMakeLists.txt  driver.cpp  load_balance.cpp  load_balance.h
tool/analysis/memory_analysis/: CMakeLists.txt  driver.cpp  memory_analysis.cpp  memory_analysis.h
tool/analysis/statistics/: CMakeLists.txt  bottomup_tree.cpp  bottomup_tree.h  statistic.cpp  statistic.h  statistic_driver.cpp  topdown_tree.cpp  topdown_tree.h
tool/analysis/timeline/: CMakeLists.txt  alignment.cpp  alignment.h  alignment_bf.cpp  alignment_test.cpp
tool/analysis/variance/: CMakeLists.txt  driver.cpp  variance.cpp  variance.h
tool/analysis/variance_mpi/: CMakeLists.txt  driver.cpp  variance_mpi.cpp  variance_mpi.h
tool/analysis/variance_stg/: CMakeLists.txt  driver.cpp  variance.cpp  variance.h
tool/compress/: CMakeLists.txt  jsicompress.cpp
tool/decompress/: CMakeLists.txt  jsidecompress.cpp
tool/gvarp/: CMakeLists.txt
tool/gvarp/include/gvarp/llvm-pass/: GVARPAnalysis.hpp  GVARPPass.hpp  ParameterFinder.hpp
tool/gvarp/src/drivers/: gvarp-c++.in  gvarp-cc.in  gvarp-opt.in
tool/gvarp/src/llvm-pass/: GVARPAnalysis.cpp  GVARPPass.cpp  ParameterFinder.cpp
tool/jsiconvert/: CMakeLists.txt  jsiconvert.cpp  jsiextract.cpp
tool/jsiread/: CMakeLists.txt  jsiread.cpp
tool/jsirun/: CMakeLists.txt  jsirun
tool/jsiwrap/: CMakeLists.txt  README.md  jsiwrap  jsiwrap-x86.cpp
(+13 files in other folders)
