add_subdirectory(timeline)
add_subdirectory(statistics)
add_subdirectory(graph)
add_subdirectory(variance)
add_subdirectory(load_balance)
add_subdirectory(comm_analysis)
add_subdirectory(dwarf_line_info_dump)
add_subdirectory(variance_stg)
add_subdirectory(variance_mpi)
add_subdirectory(comm_statistic)
add_subdirectory(memory_analysis)

# add_subdirectory(graph_time_slice)
# add_subdirectory(graph_time_slice_all)

